Spacing fixed

--- a/src/styles/navigation/Menu.module.css
+++ b/src/styles/navigation/Menu.module.css
@@ -23,22 +23,15 @@
   @apply
     /* Typography */
     font-proxima-soft-bold
-    text-5xl md:text-4xl
+    text-5xl md:text-4xl lg:text-5xl
     text-emah-dark;
-}
-
-.contact {
-  @apply
-    /* Layout */
-    hidden md:block;
 }
 
 .action {
   @apply
-    /* Spacing */
-    mt-2
-    /* Layout */
-    md:hidden;
+    /* Flexbox & grid */
+    flex
+    justify-center;
 }
 
 .background {
